--- a/public/scss/app.scss
+++ b/public/scss/app.scss
@@ -1,1 +1,5 @@
 @import "bootstrap";
+@import "_components/_footer";
+@import "_components/_typo";
+@import "_components/_helper";
+@import "_components/_home";
