--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,5 +1,30 @@
-<div class="container-full-page">
+<div class="container-full-page footer">
 	<div class="container">
-		footer
+		<div class="row">
+			<div class="col-xs-12 col-sm-4 col-md-4">
+				<h1 class="regular title defaultclr m-t-1 m-b-1">Tech Park</h1>
+				<ul class="list nav-list p-l-1">
+					<li><a href="#" class="light">link1</a></li>
+					<li><a href="#" class="light">link2</a></li>
+					<li><a href="#" class="light">link3</a></li>
+				</ul>
+			</div>
+			<div class="col-xs-12 col-sm-4 col-md-4">
+				<h2 class="regular title defaultclr m-t-1 m-b-1">Our Approach</h2>
+				<ul class="list nav-list p-l-1">
+					<li><a href="#" class="light">link1</a></li>
+					<li><a href="#" class="light">link2</a></li>
+					<li><a href="#" class="light">link3</a></li>
+				</ul>
+			</div>
+			<div class="col-xs-12 col-sm-4 col-md-4">
+				<h3 class="regular title defaultclr m-t-1 m-b-1">Questions</h3>
+				<ul class="list nav-list p-l-1">
+					<li><a href="#" class="light">link1</a></li>
+					<li><a href="#" class="light">link2</a></li>
+					<li><a href="#" class="light">link3</a></li>
+				</ul>
+			</div>
+		</div>
 	</div>
 </div>
