--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,7 @@
-<div class="container">
-    <h1>Welcome</h1>
+<div class="wrapper">
+	<div id="welcome">
+		
+	</div>
 </div>
+
+<script type="text/javascript" src="/js/welcome.js"></script>
