--- a/views/layouts/master.handlebars
+++ b/views/layouts/master.handlebars
@@ -16,6 +16,9 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
         <link rel="stylesheet" href="/css/app.min.css">
         <script src="/js/master.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.2.0/umd/react.production.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.2.0/umd/react-dom.production.min.js"></script>
+        
     </head>
     <body>
     	{{>nav}}
