--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -8,40 +8,41 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">19dNorth</a>
+      <a class="navbar-brand" href="/">19dNorth</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="sitenav">
       <ul class="nav navbar-nav">
-        <li><a href="#">Tech Stack <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Approach</a></li>
-        <li><a href="#">Pricing</a></li>
+        <li><a href="/techpack">Tech Pack <span class="sr-only">(current)</span></a></li>
+        <li><a href="/approach">Approach</a></li>
+        <li><a href="/pricing">Pricing</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Questions <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">What</a></li>
-            <li><a href="#">Why</a></li>
-            <li><a href="#">How</a></li>
+            <li><a href="/whatwedo">What</a></li>
+            <li><a href="/whywedo">Why</a></li>
+            <li><a href="/howwedo">How</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Requirements</a></li>
+            <li><a href="/requirements">Requirements</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Delivery</a></li>
+            <li><a href="/delivery">Delivery</a></li>
           </ul>
         </li>
+        <li><a href="/emailus">Email us</a></li>
       </ul>
       
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Signup</a></li>
-        <li><a href="#">Signin</a></li>
+        <li><a href="/signup">Signup</a></li>
+        <li><a href="/signin">Signin</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
+            <li><a href="/dashboard">Dashboard</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
+            <li><a href="/help">Help</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="/feedback">Feedback</a></li>
           </ul>
         </li>
       </ul>
